# fast-langdetect-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
