[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-langdetect>=0.3.2",
    "fastapi>=0.115.12",
    "langchain-core>=0.3.59",
    "langchain-openai>=0.3.16",
    "loguru>=0.7.3",
    "opencc>=1.1.9",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]
